--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
   }
   
   *{
-    margin:0; padding:0;
+    margin:1; padding:1;
     box-sizing: border-box;
     transition:all .2s linear;
     font-family: 'Exo 2', sans-serif;
@@ -162,23 +162,21 @@
 }
 
 /* carrusel */
-
-  /* Estilos para el carrusel de imágenes */
   .carousel-item img {
-    height: 770px; /* Cambia la altura de las imágenes */
+    height: 770px; 
   }
   
   .carousel-control-prev,
   .carousel-control-next {
-    color: #458B92; /* Cambia el color de las flechas */
+    color: var(--general); 
   }
   
   .carousel-indicators li {
-    background-color: #d9d0c3; /* Cambia el color de fondo de los indicadores */
+    background-color: #d9d0c3; 
   }
   
   .carousel-indicators .active {
-    background-color: #458B92; /* Cambia el color de fondo del indicador activo */
+    background-color: var(--general); 
   }
   
   .carousel-item img {
@@ -208,7 +206,7 @@
   }
   
   .nosotros .info h2{
-    color:#458B92;
+    color:var(--general);
     font-size: 3rem;
   }
   
@@ -230,13 +228,13 @@
 }
 
 .btn:hover{
-    background:#458B92;
+    background:var(--general);
 }
 
-
+/* galeria */
 .galeria{
     min-height:110vh;
-    background:#458B92;
+    background:var(--general);
   }
   
   .galeria .heading{
@@ -355,10 +353,9 @@
   
   .contact .contact-info i {
     font-size: 4rem;
-    color:#458B92;
+    color:var(--general);
     margin-right: 20px;
   }
-  
   
   /* footer */
   .footer{
@@ -421,12 +418,6 @@
 .footer .credit a{
     color:var(--general);
 }
-
-
-
-
-
-
 
 .home .hero{
   min-height: 60vh;
@@ -518,7 +509,7 @@
 }
 
 .nosotros2 .info h2{
-  color:#458B92;
+  color:var(--general);
   font-size: 3rem;
 }
 
@@ -528,11 +519,154 @@
   margin:2rem 0;
 }
 
+/* general formulario */
+main {
+  width: 90%;
+  max-width: 800px;
+  margin: 25px auto;
+  padding: 10px 40px;
+  border-radius: 10px;
+  border: 2px solid var(--general);
+  box-shadow: 0 2px 10px var(--general), 0 2px 10px var(--general);
+}
+
+.formulario{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 45px;
+}
+
+.formulario__label {
+  display: block;
+  padding: 10px 0;
+  font-size: 16px;
+}
+
+.formulario__grupo-input {
+  position: relative;
+}
+
+.formulario__input {
+  width: 90%;
+  background: transparent;
+  border-bottom: 2px solid var(--general);
+  border-right: none;
+  color: #2b2828;
+  font-size: 17px;
+  outline: none;
+  line-height: 45px;
+  padding: 0 10px;
+  transition: all 1s;
+}
+
+.formulario__validacion-estado {
+  position: absolute;
+  right: 45px;
+  bottom: 15px;
+  z-index: 1000;
+  font-size: 16px;
+  opacity: 0;
+}
+
+.formulario__input:focus {
+  box-shadow: 0 0 5px var(--general);
+}
+
+.formulario__input-error {
+  font-size: 12px;
+  margin-bottom: 0;
+  display: none;
+}
+
+.formulario__input-error-activo {
+  display: block;
+}
+
+.formulario__span {
+  font-size: 1.1em;
+  font-weight: 150;
+}
+
+.formulario__checkbox{
+  cursor: pointer;
+  height: 15px;
+  width: 15px;
+  margin: 0 10px;
+}
+
+.formulario__grupo-terminos {
+  text-align: center;
+}
+
+.formulario__grupo-terminos, .formulario__mensaje, .formulario__grupo-btn-enviar {
+  grid-column: span 2;
+}
+
+.formulario__mensaje {
+  display: none;
+  padding: 15px;
+  border-radius: 5px;
+  background: #f00;
+  text-align: center;
+}
+
+.formulario__mensaje-activo {
+  display: block;
+}
+
+.formulario__grupo-btn-enviar {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.formulario__btn {
+  padding: 15px 30px;
+  background: #000;
+  color: #fff;
+  border: none;
+  border-radius: 2px;
+  cursor: pointer;
+  font-size: 16px;
+}
+
+.formulario__btn:hover {
+  background: var(--general);
+  transition: 1s;
+}
+
+.formulario__mensaje-exito {
+  font-size: 2em;
+  color: #0cb876;
+  padding: 10px;
+  text-align: center;
+  display: none;
+}
+
+.formulario__mensaje-exito-activo { 
+  display: block;
+}
+
+/* validar */
+.formulario__grupo-correcto .formulario__validacion-estado{
+  color: #0cb876;
+  opacity: 1;
+}
+
+.formulario__grupo-incorrecto .formulario__label{
+  color: #ee0f0f;
+}
 
 
+.formulario__grupo-incorrecto .formulario__validacion-estado{
+  color: #ee0f0f;
+  opacity: 1;
+}
 
-
-
+.formulario__grupo-incorrecto .formulario__input{
+  border: 1px solid #ee0f0f;
+  
+}
 
 
 /* media queries  */
@@ -637,5 +771,22 @@
   .home .hero .text2{
     font-size: 2.5rem;
     width: 30rem;
+  }
+}
+
+/* formulario */
+@media screen and (max-width:720px) {
+  .formulario {
+      grid-template-columns: 1fr;
+  }
+
+  .formulario__grupo-terminos, 
+  .formulario__mensaje, 
+  .formulario__grupo-btn-enviar {
+      grid-column: 1;
+  }
+
+  .formulario__btn {
+      width: 100%;
   }
 }
